# DSS-Templates

./: README.md
.github/workflows/: ci.yml
square-number/: .gitignore  Cargo.toml  README.md  docker-compose.yaml
square-number-bls/: LICENSE  README.md  docker-compose.yaml
square-number-bls/abi/: SquareNumberDSS.json  Vault.json
square-number-bls/aggregator/: Cargo.toml  Dockerfile  README.md
square-number-bls/aggregator/src/: aggregator.rs  contract.rs  lib.rs  main.rs  (+1 more)
square-number-bls/contracts/: README.md  contract-addresses.json  foundry.toml  package.json
square-number-bls/operator/: Cargo.toml  Dockerfile
square-number-bls/operator/src/: health.rs  lib.rs  main.rs  operator.rs  register.rs
square-number/abi/: SquareNumberDSS.json
square-number/aggregator/: .env.template  Cargo.toml  Dockerfile  package.json
square-number/aggregator/src/: config.ts  index.ts  lib.rs  server.ts  task.rs
square-number/aggregator/src/api/: models.ts
square-number/aggregator/src/api/controllers/: operator.ts
square-number/aggregator/src/api/docs/: openAPIDocumentGenerator.ts  openAPIResponseBuilders.ts
square-number/aggregator/src/api/models/: Operator.ts  Task.ts
square-number/aggregator/src/api/routes/: index.ts  operator.ts
square-number/aggregator/src/api/routes/__tests__/: healthz.test.ts
square-number/aggregator/src/api/services/: index.ts  task.ts
square-number/aggregator/src/middleware/: rateLimiter.ts  requestLogger.ts
square-number/aggregator/src/storage/: operators.ts
square-number/aggregator/src/utils/: file.ts
square-number/aggregator/src/utils/contract/abis/: squareNumberDSSAbi.ts  vaultAbi.ts
square-number/aggregator/src/utils/contract/interactions/: core.ts
square-number/contracts/: contract-addresses.json  foundry.toml  package.json
square-number/operator/: .env.template  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
(+27 files in other folders)
